--- a/poc.ipynb
+++ b/poc.ipynb
@@ -364,7 +364,6 @@
    "outputs": [],
    "source": [
     "df_norm = (df - df.mean()) / df.std()\n",
-    "# df_norm['is_canceled'] = target\n",
     "\n",
     "df_X = df_norm.drop(columns=['is_canceled', 'reservation_status', 'reservation_status_date']).copy()\n",
     "df_y = target"
@@ -1063,16 +1062,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7580618262290955"
+       "0.8267442584037781"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,15 +1084,29 @@
     "\n",
     "# Define a simple black-box model\n",
     "class BlackBoxModel(nn.Module):\n",
-    "    def __init__(self, input_dim):\n",
+    "    def __init__(self, input_dim, hidden_dim=10):\n",
     "        super(BlackBoxModel, self).__init__()\n",
-    "        self.fc = nn.Linear(input_dim, 1)  \n",
+    "\n",
+    "        # First fully connected layer\n",
+    "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
+    "        \n",
+    "        # Second fully connected layer (hidden layer)\n",
+    "        self.fc2 = nn.Linear(hidden_dim, hidden_dim)\n",
+    "        \n",
+    "        # Output layer\n",
+    "        self.fc3 = nn.Linear(hidden_dim, 1)\n",
+    "\n",
+    "        # Activation functions\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return self.fc(x)\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        return self.sigmoid(self.fc3(x))\n",
     "\n",
     "# Select first 10 columns of the dataset as features and use 'is_canceled' as target\n",
-    "X = df_X.values[:,:-2]\n",
+    "X = df_X.values\n",
     "y = df_y.values\n",
     "\n",
     "# Split the dataset into training and testing sets (80% train, 20% test)\n",
