--- a/poc.ipynb
+++ b/poc.ipynb
@@ -371,11 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sliced_wasserstein_distance(X_s, X_t, a=None, b=None, metric='sqeuclidean', n_projections=50):\n",
+    "n_projections=50\n",
+    "thetas = np.random.randn(n_projections, X_s.shape[1])\n",
+    "thetas /= np.linalg.norm(thetas, axis=1)[:, None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 387,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sliced_wasserstein_distance(X_s, X_t, a=None, b=None, metric='sqeuclidean'):\n",
     "    \"\"\"\n",
     "    Compute the sliced Wasserstein distance between X_s and X_t\n",
     "    \n",
@@ -398,8 +409,6 @@
     "        Sliced Wasserstein Distance between X_s and X_t\n",
     "    \"\"\"\n",
     "    # Generate random projection vectors on the unit sphere\n",
-    "    thetas = np.random.randn(n_projections, X_s.shape[1])\n",
-    "    thetas /= np.linalg.norm(thetas, axis=1)[:, None]\n",
     "    \n",
     "    swd = 0\n",
     "    for theta in thetas:\n",
@@ -407,53 +416,52 @@
     "        proj_X_s = X_s.dot(theta)\n",
     "        proj_X_t = X_t.dot(theta)\n",
     "        \n",
-    "        # Sort projections\n",
-    "        proj_X_s_sorted = np.sort(proj_X_s)\n",
-    "        proj_X_t_sorted = np.sort(proj_X_t)\n",
-    "        \n",
     "        # Compute 1D Wasserstein distance and accumulate\n",
-    "        swd += ot.wasserstein_1d(proj_X_s_sorted, proj_X_t_sorted, a, b, p=2)\n",
+    "        swd += ot.wasserstein_1d(proj_X_s, proj_X_t, a, b, p=2)\n",
     "    \n",
     "    return swd / n_projections"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
     "indice_source = (df_[\n",
-    "    df_['booking_changes']==0\n",
+    "    df_['booking_changes']==3\n",
     "]).index\n",
     "\n",
     "indice_target = (df_[\n",
-    "    df_['booking_changes']>=4\n",
+    "    df_['booking_changes']==4\n",
     "]).index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_s = df_X.loc[indice_source]\n",
-    "X_t = df_X.loc[indice_target]"
+    "X_t = df_X.loc[indice_target]\n",
+    "\n",
+    "y_s = df_y.loc[indice_source]\n",
+    "y_t = df_y.loc[indice_target]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.6936563026575198"
+       "0.16261492718655954"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1059,7 @@
        "[75166 rows x 32 columns]"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,16 +1070,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8267442584037781"
+       "0.8356646299362183"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,6 +1156,167 @@
     "\n",
     "accuracy.item()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_s = model(torch.FloatTensor(X_s.values))\n",
+    "y_pred_t = model(torch.FloatTensor(X_t.values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    883\n",
+       "True      44\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 331,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(y_pred_s.reshape(-1).detach().numpy() > 0.5).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    353\n",
+       "True      23\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(y_pred_t.reshape(-1).detach().numpy() > 0.5).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_canceled\n",
+       "0    783\n",
+       "1    144\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 333,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_s.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_canceled\n",
+       "0    309\n",
+       "1     67\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_t.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 393,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M_x_list = []\n",
+    "mu_list = []\n",
+    "\n",
+    "for theta in thetas:\n",
+    "    # Project data onto the vector theta\n",
+    "    proj_X_s = X_s.dot(theta).values\n",
+    "    proj_X_t = X_t.dot(theta).values\n",
+    "\n",
+    "    proj_X_s_dist_mass = np.ones(len(proj_X_s)) / len(proj_X_s)\n",
+    "    proj_X_t_dist_mass = np.ones(len(proj_X_t)) / len(proj_X_t)\n",
+    "\n",
+    "    M_x = ot.dist(\n",
+    "        proj_X_s.reshape(proj_X_s.shape[0], 1),\n",
+    "        proj_X_t.reshape(proj_X_t.shape[0], 1),\n",
+    "        metric=\"sqeuclidean\",\n",
+    "    )\n",
+    "\n",
+    "    mu = ot.emd(proj_X_s_dist_mass, proj_X_t_dist_mass, M_x)\n",
+    "\n",
+    "    M_x_list.append(M_x)\n",
+    "    mu_list.append(mu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M_y = ot.dist(\n",
+    "    y_pred_s.reshape(y_pred_s.shape[0], 1),\n",
+    "    y_pred_t.reshape(y_pred_t.shape[0], 1),\n",
+    "    metric=\"sqeuclidean\",\n",
+    ").detach().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_s_dist_mass = np.ones(len(y_pred_s)) / len(y_pred_s)\n",
+    "y_pred_t_dist_mass = np.ones(len(y_pred_t)) / len(y_pred_t)\n",
+    "\n",
+    "nu = ot.emd(y_pred_s_dist_mass, y_pred_t_dist_mass, M_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
