--- a/poc.ipynb
+++ b/poc.ipynb
@@ -1531,6 +1531,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pkg_resources\n",
+    "\n",
+    "# List of packages to check versions\n",
+    "packages = [\n",
+    "    \"pandas\",\n",
+    "    \"numpy\",\n",
+    "    \"seaborn\",\n",
+    "    \"pot\",\n",
+    "    \"scikit-learn\",\n",
+    "    \"torch\"\n",
+    "]\n",
+    "\n",
+    "# Get the currently installed version for each package\n",
+    "installed_packages = {pkg.key: pkg.version for pkg in pkg_resources.working_set}\n",
+    "requirements = []\n",
+    "\n",
+    "for package in packages:\n",
+    "    if package in installed_packages:\n",
+    "        requirements.append(f\"{package}=={installed_packages[package]}\")\n",
+    "    else:\n",
+    "        print(f\"Warning: {package} not found in installed packages.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pandas==2.0.1',\n",
+       " 'numpy==1.23.5',\n",
+       " 'seaborn==0.12.2',\n",
+       " 'pot==0.9.0',\n",
+       " 'scikit-learn==1.0.2',\n",
+       " 'torch==2.0.0']"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requirements"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
