added models and distances

--- a/poc.ipynb
+++ b/poc.ipynb
@@ -15,6 +15,9 @@
     "\n",
     "import torch\n",
     "\n",
+    "from models.mlp import BlackBoxModel\n",
+    "from utils.distances import sliced_wasserstein_distance\n",
+    "\n",
     "pd.set_option('display.max_columns', None)\n"
    ]
   },
@@ -367,49 +370,6 @@
     "\n",
     "df_X = df_norm.drop(columns=['is_canceled', 'reservation_status', 'reservation_status_date']).copy()\n",
     "df_y = target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sliced_wasserstein_distance(X_s, X_t, thetas, a=None, b=None, metric='sqeuclidean'):\n",
-    "    \"\"\"\n",
-    "    Compute the sliced Wasserstein distance between X_s and X_t\n",
-    "    \n",
-    "    Parameters:\n",
-    "    X_s : np.ndarray, shape (n_samples_a, dim)\n",
-    "        samples in the source domain\n",
-    "    X_t : np.ndarray, shape (n_samples_b, dim)\n",
-    "        samples in the target domain\n",
-    "    a : np.ndarray, shape (n_samples_a,), optional\n",
-    "        weights of each sample of X_s, default is uniform weight\n",
-    "    b : np.ndarray, shape (n_samples_b,), optional\n",
-    "        weights of each sample of X_t, default is uniform weight\n",
-    "    metric : str, optional\n",
-    "        metric to be used for Wasserstein-1 distance computation\n",
-    "    n_projections : int, optional\n",
-    "        number of projections\n",
-    "    \n",
-    "    Returns:\n",
-    "    swd : float\n",
-    "        Sliced Wasserstein Distance between X_s and X_t\n",
-    "    \"\"\"\n",
-    "    # Generate random projection vectors on the unit sphere\n",
-    "    \n",
-    "    swd = 0\n",
-    "    n_projections = len(thetas)\n",
-    "    for theta in thetas:\n",
-    "        # Project data onto the vector theta\n",
-    "        proj_X_s = X_s.dot(theta)\n",
-    "        proj_X_t = X_t.dot(theta)\n",
-    "        \n",
-    "        # Compute 1D Wasserstein distance and accumulate\n",
-    "        swd += ot.wasserstein_1d(proj_X_s, proj_X_t, a, b, p=2)\n",
-    "    \n",
-    "    return swd / n_projections"
    ]
   },
   {
@@ -1073,16 +1033,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8308903574943542"
+       "0.8295921087265015"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,29 +1052,6 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# Define a simple black-box model\n",
-    "class BlackBoxModel(nn.Module):\n",
-    "    def __init__(self, input_dim, hidden_dim=10):\n",
-    "        super(BlackBoxModel, self).__init__()\n",
-    "\n",
-    "        # First fully connected layer\n",
-    "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
-    "        \n",
-    "        # Second fully connected layer (hidden layer)\n",
-    "        self.fc2 = nn.Linear(hidden_dim, hidden_dim)\n",
-    "        \n",
-    "        # Output layer\n",
-    "        self.fc3 = nn.Linear(hidden_dim, 1)\n",
-    "\n",
-    "        # Activation functions\n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.sigmoid = nn.Sigmoid()\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.relu(self.fc1(x))\n",
-    "        x = self.relu(self.fc2(x))\n",
-    "        return self.sigmoid(self.fc3(x))\n",
     "\n",
     "# Select first 10 columns of the dataset as features and use 'is_canceled' as target\n",
     "X = df_X.values\n",
@@ -1528,67 +1465,6 @@
     "gradient = compute_gradient(K=thetas, X=X_s, X_prime=X_t, mu=mu_list, nu=nu, lambda_val=lambda_val, b=model)\n",
     "print(gradient)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pkg_resources\n",
-    "\n",
-    "# List of packages to check versions\n",
-    "packages = [\n",
-    "    \"pandas\",\n",
-    "    \"numpy\",\n",
-    "    \"seaborn\",\n",
-    "    \"pot\",\n",
-    "    \"scikit-learn\",\n",
-    "    \"torch\"\n",
-    "]\n",
-    "\n",
-    "# Get the currently installed version for each package\n",
-    "installed_packages = {pkg.key: pkg.version for pkg in pkg_resources.working_set}\n",
-    "requirements = []\n",
-    "\n",
-    "for package in packages:\n",
-    "    if package in installed_packages:\n",
-    "        requirements.append(f\"{package}=={installed_packages[package]}\")\n",
-    "    else:\n",
-    "        print(f\"Warning: {package} not found in installed packages.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['pandas==2.0.1',\n",
-       " 'numpy==1.23.5',\n",
-       " 'seaborn==0.12.2',\n",
-       " 'pot==0.9.0',\n",
-       " 'scikit-learn==1.0.2',\n",
-       " 'torch==2.0.0']"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "requirements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
