exact_1d error corrected

--- a/poc.ipynb
+++ b/poc.ipynb
@@ -507,18 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_num = 60\n",
+    "sample_num = 100\n",
     "\n",
     "indice = (X_test.sample(sample_num)).index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,38 +527,67 @@
     "\n",
     "y_target = torch.distributions.beta.Beta(0.1, 0.9).sample((sample_num,))\n",
     "\n",
-    "y_true = y_test.loc[indice]"
+    "y_true = y_test.loc[indice]\n",
+    "\n",
+    "delta = 0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
     "from explainers.dce import DistributionalCounterfactualExplainer\n",
     "\n",
-    "explainer = DistributionalCounterfactualExplainer(model=model, X=X, y_target=y_target, lr=1e-1, epsilon=0.5, lambda_val=100, delta=0.2)"
+    "explainer = DistributionalCounterfactualExplainer(\n",
+    "    model=model, \n",
+    "    X=X, \n",
+    "    y_target=y_target, \n",
+    "    lr=1e-1, \n",
+    "    epsilon=0.5, \n",
+    "    lambda_val=100, \n",
+    "    delta=delta)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.40790119804431574, 0.6021811124300864)"
+       "0.38203483533054466"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "explainer.wd.distance_interval(y, y_target, delta=0.2)"
+    "np.sqrt(explainer.wd.distance(y, y_target, delta=delta)[0].item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.1958103394186153, 0.5249127054300693)"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "explainer.wd.distance_interval(y, y_target, delta=delta)"
    ]
   },
   {
