--- a/poc.ipynb
+++ b/poc.ipynb
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
     "\n",
     "y_true = y_test.loc[indice]\n",
     "\n",
-    "delta = 0.2"
+    "delta = 0"
    ]
   },
   {
@@ -552,16 +552,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.38203483533054466"
+       "0.2884903994207392"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,6 +588,27 @@
    ],
    "source": [
     "explainer.wd.distance_interval(y, y_target, delta=delta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.23388159951359525, 0.32511162726421067)"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from explainers.distances import bootstrap_1d\n",
+    "bootstrap_1d(y, y_target, delta=delta)"
    ]
   },
   {
