--- a/poc.ipynb
+++ b/poc.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\leiyo\\Anaconda3\\lib\\site-packages\\scipy\\__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.2\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +358,7 @@
        "4                          1                   1                       76  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,16 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6767736077308655"
+       "0.6747214794158936"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,18 +516,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_num = 100\n",
+    "sample_num = 60\n",
     "\n",
     "indice = (X_test.sample(sample_num)).index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,12 +538,13 @@
     "\n",
     "y_true = y_test.loc[indice]\n",
     "\n",
-    "delta = 0"
+    "delta = 0.25\n",
+    "alpha = 0.10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,16 +562,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2884903994207392"
+       "0.5550720332628184"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,52 +582,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.1958103394186153, 0.5249127054300693)"
+       "(0.28271783461761674, 0.721316647615433)"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "explainer.wd.distance_interval(y, y_target, delta=delta)"
+    "explainer.wd.distance_interval(y, y_target, delta=delta, alpha=0.10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.23388159951359525, 0.32511162726421067)"
+       "(0.48152994646154285, 0.6323741336401097)"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from explainers.distances import bootstrap_1d\n",
-    "bootstrap_1d(y, y_target, delta=delta)"
+    "bootstrap_1d(y, y_target, delta=delta, alpha=alpha)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "explainer.optimize_without_chance_constraints(max_iter=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2149244677027764"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(explainer.swd.distance(explainer.X, explainer.X_prime, delta)[0].item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, inf)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "explainer.swd.distance_interval(explainer.X, explainer.X_prime, delta, alpha=alpha)"
    ]
   },
   {
