--- a/poc.ipynb
+++ b/poc.ipynb
@@ -27,7 +27,7 @@
     "import seaborn as sns\n",
     "\n",
     "import torch.optim as optim\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split1\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "4                          1                   1                       76  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,16 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6768154501914978"
+       "0.6747214794158936"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,22 +557,21 @@
     "    lr=1e-1, \n",
     "    epsilon=0.5, \n",
     "    lambda_val=100, \n",
-    "    n_proj=500,\n",
     "    delta=delta)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5670891689679504"
+       "0.5550720332628184"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,16 +582,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.25904228977021426, 0.7253112272935949)"
+       "(0.28271783461761674, 0.721316647615433)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,16 +602,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.4900780128273333, 0.6531006961389054)"
+       "(0.48152994646154285, 0.6323741336401097)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,74 +623,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Optimization (without chance constraints) started\n",
-      "INFO:root:Iter 1: Q = -34.435550689697266, term1 = 0.0012408860493451357, term2 = -34.436790466308594\n",
-      "INFO:root:Iter 2: Q = -35.52024459838867, term1 = 0.003684167517349124, term2 = -35.523929595947266\n",
-      "INFO:root:Iter 3: Q = -36.3477897644043, term1 = 0.006542420946061611, term2 = -36.354331970214844\n",
-      "INFO:root:Iter 4: Q = -37.04471969604492, term1 = 0.009579088538885117, term2 = -37.054298400878906\n",
-      "INFO:root:Iter 5: Q = -37.76044845581055, term1 = 0.012906637042760849, term2 = -37.773353576660156\n",
-      "INFO:root:Iter 6: Q = -38.42860794067383, term1 = 0.016421133652329445, term2 = -38.445030212402344\n",
-      "INFO:root:Iter 7: Q = -38.96774673461914, term1 = 0.019771374762058258, term2 = -38.987518310546875\n",
-      "INFO:root:Iter 8: Q = -39.478389739990234, term1 = 0.02311818115413189, term2 = -39.50150680541992\n",
-      "INFO:root:Iter 9: Q = -39.88318634033203, term1 = 0.02614397369325161, term2 = -39.90932846069336\n",
-      "INFO:root:Iter 10: Q = -40.2802734375, term1 = 0.029049169272184372, term2 = -40.309322357177734\n",
-      "INFO:root:Iter 11: Q = -40.63533020019531, term1 = 0.03179766982793808, term2 = -40.66712951660156\n",
-      "INFO:root:Iter 12: Q = -40.939964294433594, term1 = 0.034143317490816116, term2 = -40.97410583496094\n",
-      "INFO:root:Iter 13: Q = -41.193058013916016, term1 = 0.036269158124923706, term2 = -41.22932815551758\n",
-      "INFO:root:Iter 14: Q = -41.41460037231445, term1 = 0.03808116912841797, term2 = -41.45268249511719\n",
-      "INFO:root:Iter 15: Q = -41.62189483642578, term1 = 0.03988182544708252, term2 = -41.66177749633789\n",
-      "INFO:root:Iter 16: Q = -41.80268859863281, term1 = 0.0413629524409771, term2 = -41.844051361083984\n",
-      "INFO:root:Iter 17: Q = -41.963218688964844, term1 = 0.042581818997859955, term2 = -42.005802154541016\n",
-      "INFO:root:Iter 18: Q = -42.116695404052734, term1 = 0.043803658336400986, term2 = -42.160499572753906\n",
-      "INFO:root:Iter 19: Q = -42.2772102355957, term1 = 0.04511725530028343, term2 = -42.32232666015625\n",
-      "INFO:root:Iter 20: Q = -42.425193786621094, term1 = 0.04621633514761925, term2 = -42.47140884399414\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "explainer.optimize_without_chance_constraints(max_iter=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X_s = explainer.X.clone()\n",
-    "# X_t = explainer.X_prime.clone()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3035215418961804"
+       "0.2149244677027764"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sqrt(explainer.swd.distance(X_s, X_t, delta)[0].item())"
+    "np.sqrt(explainer.swd.distance(explainer.X, explainer.X_prime, delta)[0].item())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -700,23 +661,13 @@
        "(0.0, inf)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "explainer.swd.distance_interval(X_s, X_t, delta=delta, alpha=alpha)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from explainers.distances import bootstrap_sw\n",
-    "# bootstrap_sw(X_s, X_t, delta=delta, alpha=alpha)"
+    "explainer.swd.distance_interval(explainer.X, explainer.X_prime, delta, alpha=alpha)"
    ]
   },
   {
